--- a/index3.xhtml
+++ b/index3.xhtml
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml;
       charset=utf-8" />
-    <title>DBFConsult Home</title>
+    <title>DBFConsult website</title>
     <link media="screen" href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
