--- a/index3.xhtml
+++ b/index3.xhtml
@@ -120,10 +120,9 @@
       </div>
     </div>
     <div class="container" id="footer">
-      <p>(c) 2009 Sitename.com. Design by <a
+      <p>(c) 2009 dbfconsult.be. Design by <a
           href="http://www.nodethirtythree.com/">nodethirtythree</a> + <a
           href="http://www.freecsstemplates.org">FCT</a></p>
     </div>
-    
   </body>
 </html>
