--- a/index3.xhtml
+++ b/index3.xhtml
@@ -10,8 +10,7 @@
     <div id="wrapper">
       <div class="container" id="header">
         <div id="logo">
-          <h1><a href="#">dbfconsult<br />
-            </a></h1>
+          <h1>DBFConsult<br/></h1>
           <p><br />
           </p>
         </div>
