--- a/index3.xhtml
+++ b/index3.xhtml
@@ -22,6 +22,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Technologies</a></li>
           <li><a href="#">Projects</a></li>
+          <li><a href="http://dbfconsult.wordpress.com">Blog</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
