--- a/index3.xhtml
+++ b/index3.xhtml
@@ -7,6 +7,20 @@
     <link media="screen" href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38602693-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>  
+  
     <div id="wrapper">
       <div class="container" id="header">
         <div id="logo">
